<resources>
    <string name="app_name">MediApp</string>
    <string name="password">Password</string>
    <string name="login"><u>Login</u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="email">Email</string>
    <string name="gp_login">GP Login</string>
    <string name="first_name">First Name</string>
    <string name="gp_sign_up"><u>GP Sign Up</u></string>
    <string name="last_name">Last Name</string>
    <string name="user_id">User ID</string>
    <string name="phone_number">Phone Number</string>
    <string name="login_as_a_patient"><u>Login as a Patient</u></string>
    <string name="login_as_a_gp"><u>Login as a GP</u></string>
    <string name="patient_sign_up"><u>Patient Sign Up</u></string>
    <string name="age">Age</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up_as_a_gp"><u>Sign Up as a GP</u></string>
    <string name="sign_up_as_a_patient"><u>Sign Up as a Patient</u></string>
    <string name="gp_home"><u>GP Home</u></string>
    <string name="patient_home"><u>Patient Home</u></string>
    <string name="patient_login">Patient Login</string>
    <string name="welcome">Welcome!</string>
    <string name="bannerDescription">Your personal medical helper</string>
    <string name="banner"><u>MediApp</u></string>
    <string name="about_us"><u>About Us</u></string>
    <string name="support"><u>Support</u></string>
    <string name="return_home"><u>Return Home</u></string>
    <string name="heart_disease_rating">Heart Disease Rating</string>
    <string name="diabetes_rating">Diabetes Rating</string>
    <string name="gp_number">GP Number</string>
    <string name="insurance_company_number">Insurance Company Number</string>
    <string name="ratings_amp_reviews"><u><![CDATA[Ratings & Reviews]]></u></string>
    <string name="insurance_registration"><u>Insurance Registration</u></string>
    <string name="name_of_insurance_company">Name of Insurance Company</string>
    <string name="aboutText">MediApp is you all in one medical professional hub for you Android phone. Whether you\'re a GP or a Patient we feel like we offer a service to help. This app was created with medical professionals in mind to have an ease of use and be approachable. \n\n In this day and age medical safety and risk awareness is at an all time high so we here at Medi Technologies feel it is our obligation to provide the best service possible through MediApp and MediWeb with use of our own tech such as Medi Predict and MediCoin to make the process as easy and stress free as possible for both professionals and patients.</string>
    <string name="in_progress">In Progress</string>
    <string name="alzheimer_s_rating">Alzheimer\'s Rating</string>
    <string name="register_insurance_company">Register Insurance Company</string>
    <string name="support_amp_contact_information"><![CDATA[Support & Contact Information]]></string>
    <string name="support_email">Email Address: MediAppSupport@gmail.ie</string>
    <string name="support_phone">Phone us: +353851234567</string>
    <string name="rate">Rate our App</string>
    <string name="review">Write a Review</string>
    <string name="submit">Submit</string>
</resources>