<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">

            <TextView
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/banner"
                android:textAlignment="center"
                android:textSize="60sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bannerDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/bannerDescription"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/banner" />

            <Button
                android:id="@+id/gpButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/gp_home"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bannerDescription" />

            <Button
                android:id="@+id/patientButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/patient_home"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gpButton" />

            <Button
                android:id="@+id/aboutButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/about_us"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/patientButton" />

            <Button
                android:id="@+id/supportButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/support"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/aboutButton" />

            <Button
                android:id="@+id/insuranceButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/insurance_registration"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/supportButton" />

            <Button
                android:id="@+id/ratingsButton"
                android:layout_width="380dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="400dp"
                android:backgroundTint="#0ED6B9"
                android:text="@string/ratings_amp_reviews"
                android:textColor="#ffffff"
                android:textSize="26sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/insuranceButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</RelativeLayout>